# Mado

./: .gitignore  AGENTS.md  README.md  TASKS.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vite.config.ts
src/: appearance-state.ts  code-block-language-state.ts  delete-confirm-focus-state.ts  directory-refresh-state.ts  editor-scale-state.ts  find-replace-state.ts  inline-format-state.ts  main.ts  milkdown-inline-html.ts  milkdown-sync-state.ts  recent-files-error-state.ts  save-flow-state.ts  shortcut-guards.ts  source-history-state.ts  style.css  table-overlay-state.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
tests/: appearance-font-panel-style.test.mjs  appearance-rendering-style.test.mjs  appearance-state.test.mjs  code-block-language-overlay-source.test.mjs  code-block-language-state.test.mjs  default-font-baseline-style.test.mjs  delete-confirm-focus-state.test.mjs  directory-refresh-state.test.mjs  editor-body-font-size-style.test.mjs  editor-max-width-style.test.mjs  editor-scale-state.test.mjs  editor-scale-style.test.mjs  external-open-source.test.mjs  find-replace-state.test.mjs  heading-marker-menu-source.test.mjs  inline-format-state.test.mjs  milkdown-sync-state.test.mjs  native-menu-structure.test.mjs  outline-sidebar-state.test.mjs  recent-files-error-state.test.mjs  save-flow-state.test.mjs  shortcut-guards.test.mjs  source-history-state.test.mjs  status-bar-state.test.mjs  table-overlay-state.test.mjs  typora-theme-support-source.test.mjs
