[package]
name = "mado"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.1", features = [] }
tauri-plugin-dialog = "2.7.0"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38.2"
windows-core = "0.61"
