[package]
name = "mado"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.10.1", features = [] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-single-instance = "2.4.1"
trash = "5"

[dev-dependencies]
serde_json = "1"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38.2"
windows-core = "0.61"
winreg = "0.55"
